--- a/style.css
+++ b/style.css
@@ -293,26 +293,24 @@ scroll-text
 -----------------------------------*/
 .container-scrollText {
   width: 100%;
-  height: 100vh;
-  background-color: #111111;
+  height: 85vh;
+  background-color: #272727;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-top: 5%;
   border-top-left-radius: 40%;
   border-bottom-right-radius: 40%;
 }
 
 .scroll-text {
-  font-size: 2em;
+  font-size: 1.7em;
   color: #b2b2b2;
   font-weight: bold;
   line-height: 1em;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 1%;
-  padding-top: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 3%;
   -webkit-clip-path: inset(0 100% 0 0);
           clip-path: inset(0 100% 0 0);
   word-break: break-all;
@@ -322,6 +320,7 @@ scroll-text
   color: transparent;
   -webkit-text-stroke: 0.02em rgb(255, 255, 255);
 }
+
 
 /*-------------------------
 scroll-sticky
@@ -339,7 +338,7 @@ scroll-sticky
 
 .bg-text {
   color: #fff;
-  font-size: 2em;
+  font-size: 1em;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -450,7 +449,7 @@ slide-scroll
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2em;
+  font-size: 1em;
   font-weight: bold;
 }
 
@@ -484,12 +483,12 @@ slide-scroll
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 3em;
+  font-size: 1em;
 }
 
 .panel h2 {
   color: #fff;
-  font-size: 2em;
+  font-size: 250%;
 }
 
 .footer {
