--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
   line-height: 1.8;
   overflow-x: hidden;
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Noto Sans JP", sans-serif;
+}
 
 
 /*-------------------------------------
@@ -18,7 +24,7 @@ opening-animation
 }
 .opening{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: relative;
   position: fixed;
   top: 0;
@@ -35,18 +41,92 @@ opening-animation
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(0,0,0,1);
   z-index: 1;
 }
 .opening__logo{
   display: block;
-  width: 450px;
+  width: 500px;
   height: 500px;
   z-index: 2;
   clip-path: inset(0 100% 0 0);/*予め切り取り*/
   transform: scale(1.1);/*予め大きくしておく*/
   opacity: 0;/*予め透明に*/
 }
+.mainVisual{
+  width: 100%;
+  height: 70vh;
+  overflow: hidden;
+}
+
+#container_mainVisual { 
+  margin: 3%; 
+}
+
+#circle{ 
+  position: relative;
+  width: 100%; 
+  padding-bottom: 90%; 
+  overflow: hidden; 
+}
+
+#circle text{ 
+   font-size: 1.35em;
+  font-weight: bold; 
+}
+
+#circle svg{ 
+  position: absolute;
+  left: 0;
+  top: 0;
+  width:100%; 
+  height: 390px;
+
+  -webkit-animation-name: rotate;
+     -moz-animation-name: rotate;
+      -ms-animation-name: rotate;
+       -o-animation-name: rotate;
+          animation-name: rotate;
+  -webkit-animation-duration: 10s;
+     -moz-animation-duration: 10s;
+      -ms-animation-duration: 10s;
+       -o-animation-duration: 10s;
+          animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+     -moz-animation-iteration-count: infinite;
+      -ms-animation-iteration-count: infinite;
+       -o-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+     -moz-animation-timing-function: linear;
+      -ms-animation-timing-function: linear;
+       -o-animation-timing-function: linear;
+          animation-timing-function: linear;
+
+}
+
+@-webkit-keyframes rotate {
+    from { -webkit-transform: rotate(360deg); }
+    to { -webkit-transform: rotate(0); }
+}
+@-moz-keyframes rotate {
+    from { -moz-transform: rotate(360deg); }
+    to { -moz-transform: rotate(0); }
+}
+@-ms-keyframes rotate {
+    from { -ms-transform: rotate(360deg); }
+    to { -ms-transform: rotate(0); }
+}
+@-o-keyframes rotate {
+    from { -o-transform: rotate(360deg); }
+    to { -o-transform: rotate(0); }
+}
+@keyframes rotate {
+    from { transform: rotate(360deg); }
+    to { transform: rotate(0); }
+}
+
+
 
 /*------------------------------------
 progress-bar
@@ -164,61 +244,6 @@ menu-content
 }
 .header-lists li + li{
   margin-top: 10%;
-}
-
-
-/*-----------------------------------
-circle-percentage
------------------------------------*/
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Noto Sans JP", sans-serif;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: initial;
-}
-
-body {
-  background-color: white;
-}
-
-.container-percentageCircle {
-  width: 100%;
-  height: 125vh;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.box {
-  position: relative;
-}
-
-.box svg {
-  transform-origin: center;
-  transform: rotate(120deg);
-}
-
-.box .circle-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  text-shadow: 1px #000;
-  -webkit-text-stroke: 1px #000;
-  font-family: "Montserrat", sans-serif;
-  font-size: 54px;
-  font-weight: bold;
 }
 
 /*-----------------------------------
@@ -365,81 +390,6 @@ scroll-sticky
 }
 
 /*-------------------------
-card-animation
---------------------------*/
-.card1 {
-  position: relative;
-  width: 35%;
-  height: 30%;
-  background-color: rgb(61, 61, 61);
-  overflow: hidden;
-  margin-left: 5%;
-  margin-bottom: 10%;
-}
-
-.card_image {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  scale: 1.15;
-  transition: opacity 0.25s, scale 0.35s;
-}
-
-.card1:hover .card_image {
-  opacity: 0.5;
-  scale: 1;
-}
-
-.card_body {
-  position: absolute;
-  inset: 0;
-  padding: 5%;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 15px;
-  justify-content: center;
-  margin-left: 5%;
-  margin-bottom: 10%;
-}
-
-.card_body::before {
-  content: "";
-  position: absolute;
-  inset: 20px;
-  border: 2px solid #fff;
-  opacity: 0;
-  scale: 1.25;
-  transition: opacity 0.25s, scale 0.25s;
-}
-
-.card1:hover .card_body::before {
-  opacity: 1;
-  scale: 1;
-}
-
-.card_title {
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
-}
-
-.card_description {
-  font-size: 2em;
-  opacity: 0;
-  translate: -25px;
-  transition: opacity 0.25s, translate 0.25s;
-}
-
-.card1:hover .card_description {
-  opacity: 1;
-  translate: 0;
-}
-
-/*-------------------------
 slide-scroll
 --------------------------*/
 .fv {
@@ -490,6 +440,139 @@ slide-scroll
   color: #fff;
   font-size: 250%;
 }
+
+/*-------------------------
+slide-scroll
+--------------------------*/
+
+.section{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15vh;
+}
+.section:last-child{
+  padding-bottom: 40vh;
+}
+.title__en{
+  font-size: 1.8em;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  color: #272727;
+}
+.title__jp{
+  width: fit-content;
+  font-size: 0.8em;
+  color: #272727;
+}
+
+/* ここまでは見た目を整える記述 */
+.js-text-effect{
+  position: relative;
+  transform: translateY(20px);
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+  --translateX:0px;
+}
+.js-text-effect::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(var(--translateX));
+}
+
+/* ===============================================
+# プロセスイメージ
+=============================================== */
+.process{
+  width: 100%;
+  height: 100vh;
+  padding: 0 40px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+}
+.process__inner{
+  max-width: 1280px;
+  width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  margin: 0 auto;
+}
+.process__arrow{
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  top: 68px;
+  left: 0;
+  background-color: #272727;
+  transform-origin: left center;
+}
+.process__arrow::after{
+  content: '';
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 0 10px 15px;
+  border-color: transparent transparent transparent #272727;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(50%,-50%);
+}
+.process__item{
+  font-family: 'Zen Maru Gothic',sans-serif;
+}
+.process__mark{
+  width: 100%;
+  height: 80px;
+  font-size: 18px;
+  color: #272727;
+  font-weight: bold;
+  position: relative;
+}
+.process__circle{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #272727;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translateX(-9px);
+}
+.process__bar{
+  display: inline-block;
+  width: 2px;
+  height: 100%;
+  background-color: #272727;
+  border-radius: 50%;
+  transform-origin: left bottom;
+}
+.process__term{
+  font-size: 16px;
+  color: #272727;
+  position: absolute;
+  top: 0;
+  left: 20px;
+}
+.process__text{
+  font-size: 16px;
+  color: #272727;
+  line-height: 1.7;
+  padding: 10px 0 0 20px;
+}
+
 
 .footer {
   background-color: #fff;
