--- a/style.css
+++ b/style.css
@@ -24,20 +24,19 @@ opening-animation
 }
 .opening{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99;
-
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .opening__mask{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -55,7 +54,7 @@ opening-animation
 }
 .mainVisual{
   width: 100%;
-  height: 70vh;
+  height: 65vh;
   overflow: hidden;
 }
 
@@ -258,7 +257,6 @@ loop-text
 .loop03__box {
   display: flex;
   width: 100vw;
-  padding-top: 15%;
   padding-bottom: 10px;
 }
 
@@ -336,7 +334,7 @@ scroll-text
   padding-left: 3%;
   padding-right: 3%;
   padding-top: 3%;
-  padding-bottom: 1em;
+  padding-bottom: 0;
   -webkit-clip-path: inset(0 100% 0 0);
           clip-path: inset(0 100% 0 0);
   word-break: break-all;
@@ -463,7 +461,57 @@ slide-scroll
   align-items: center;
   justify-content: center;
   padding: 3%;
+  padding-top: 10%;
 }
+
+.btnarrow4{
+  position: relative;
+  display: inline-block;
+  padding: 0 7%;
+  color: #272727;
+  text-decoration: none;
+  outline: none;
+  margin-right: 3%;
+  margin-left: 55%;
+  margin-top: 5%;
+}
+
+.btnarrow4::before{
+  content: '';
+  position: absolute;
+  bottom:-8px;
+  left:15%;
+  width: 85%;
+  height: 1px;
+  background:#272727;
+  transition: all .4s;
+}
+
+.btnarrow4::after{
+  content: '';
+  position: absolute;
+  bottom:-3px;
+  right:0;
+  width: 15px;
+  height:1px;
+  background:#272727;
+  transform: rotate(35deg);
+  transition: all .4s;
+}
+
+.btnarrow4:hover::before{
+  left:20%;
+}
+
+.btnarrow4:hover::after{
+  right:-5%;
+}
+
+
+/*-------------------------
+skill.html
+--------------------------*/
+
 .section-explain{
   font-size: 1.5em;
 }
@@ -481,6 +529,7 @@ slide-scroll
 
 /* ここまでは見た目を整える記述 */
 .js-text-effect{
+  margin-left: 3%;
   position: relative;
   transform: translateY(20px);
   opacity: 0;
@@ -512,3 +561,89 @@ footer
   font-size: 2em;
   font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
+
+
+
+
+/* Styles from the GreenSock website */
+body {
+  font-weight: 300;
+}
+.ipsType_right {
+  text-align: right;
+}
+.ipsType_center {
+  text-align: center;
+}
+.cInnerContent {
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.ipsSpacer_bottom_double {
+  margin-bottom: 30px;
+}
+.ipsGrid {
+  display: inline-block;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+}
+.ipsGrid::before, .ipsGrid::after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.ipsGrid > [class*="ipsGrid_span"] {
+  display: block;
+  width: 100%;
+  min-height: 30px;
+  box-sizing: border-box;
+}
+.ipsGrid > .ipsGrid_span5 {
+  width: 40.42553191489362%;
+}
+.ipsGrid > .ipsGrid_span7 {
+  width: 57.44680851063829%;
+}
+.ipsGrid > [class*="ipsGrid_span"] {
+  float: left;
+  margin-left: 2%;
+}
+.ipsGrid > [class*="ipsGrid_span"]:first-child {
+  margin-left: 0;
+}
+.feature {
+  display: flex;
+  align-items: center;
+}
+.card {
+  margin-bottom: 30px;
+  border: 1px solid #cccccc;
+  border-radius: 8px;
+  overflow: hidden;
+  background: #ffffff;
+  box-shadow: 1px 1px 5px 1px #CCCCCC;
+/*   transition: 0.3s; */
+}
+.featured-image-container .card {
+  padding: 10px;
+  height: 0;
+  padding-bottom: calc(100% - 10px);
+}
+h2.heading_large {
+  font-size: 1.8em;
+}
+img {
+  max-width: 100%;
+}
+
+.header-section {
+  margin: 200px auto;
+}
+
+.gs_reveal {
+  opacity: 0;
+  visibility: hidden;
+  will-change: transform, opacity;
+}
