--- a/css/style-skill.scss
+++ b/css/style-skill.scss
@@ -352,8 +352,7 @@ menu-content
   .detail h5 {
     color: #fff;
     font-size: 1em !important;
-    margin-top: 1.8rem;
-    line-height: 1em !important;
+    line-height: 5rem !important;
     padding-left: 2%;
     padding-right: 2%;
   }
