--- a/css/style-skill.css
+++ b/css/style-skill.css
@@ -388,4 +388,13 @@ h2 .credit {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
+}
+
+.right-scroll {
+  width: 15%;
+  height: 15%;
+  right: 3%;
+  size: 6%;
+  position: absolute;
+  z-index: 5;
 }/*# sourceMappingURL=style-skill.css.map */
