--- a/css/style.css
+++ b/css/style.css
@@ -481,86 +481,233 @@ footer
 
 
 
+.lastContainer {
+  overflow-y: scroll;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+  font-family: "Roboto Flex", sans-serif;
+  font-variation-settings: "opsz" 48, "slnt" 0, "GRAD" 0, "XTRA" 603, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514, "YTUC" 712, "wght" 700;
+  font-stretch: 151%;
+  font-optical-sizing: auto;
+  color: #282623;
+  background-color: #fff4e4;
+  scroll-behavior: smooth;
+  margin: 0;
+}
 
-/* Styles from the GreenSock website */
-body {
-  font-weight: 300;
+h1 {
+  font-size: clamp(3rem, 7vw, 7rem);
 }
-.ipsType_right {
-  text-align: right;
-}
-.ipsType_center {
-  text-align: center;
-}
-.cInnerContent {
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.ipsSpacer_bottom_double {
-  margin-bottom: 30px;
-}
-.ipsGrid {
-  display: inline-block;
-  display: -ms-flexbox;
+
+.firstContainer {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: rgba(255, 179, 0, 0.6901960784);
+  overflow-x: hidden;
 }
-.ipsGrid::before, .ipsGrid::after {
-  display: table;
-  content: "";
-  line-height: 0;
+
+.lastContainer {
+  display: flex;
+  height: 100vh;
+  background: rgba(255, 179, 0, 0.6901960784);
+  overflow-x: hidden;
 }
-.ipsGrid > [class*="ipsGrid_span"] {
-  display: block;
-  width: 100%;
-  min-height: 30px;
-  box-sizing: border-box;
+
+.container.single {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-wrap: nowrap;
+  max-width: 100%;
+  overflow: hidden;
 }
-.ipsGrid > .ipsGrid_span5 {
-  width: 40.42553191489362%;
+.container.single .inner-container {
+  z-index: 2;
+  height: 100vh;
+  display: flex;
+  flex-wrap: nowrap;
 }
-.ipsGrid > .ipsGrid_span7 {
-  width: 57.44680851063829%;
-}
-.ipsGrid > [class*="ipsGrid_span"] {
-  float: left;
-  margin-left: 2%;
-}
-.ipsGrid > [class*="ipsGrid_span"]:first-child {
-  margin-left: 0;
-}
-.feature {
+.container.single .jump-btn {
+  z-index: 5;
+  white-space: nowrap;
+  min-width: 5rem !important;
+  height: 5rem;
+  border-radius: 150px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 3rem;
+  color: #282623;
+  bottom: 3rem;
+  background-color: #fff4e4;
+  text-decoration: none;
 }
-.card {
-  margin-bottom: 30px;
-  border: 1px solid #cccccc;
-  border-radius: 8px;
-  overflow: hidden;
-  background: #ffffff;
-  box-shadow: 1px 1px 5px 1px #CCCCCC;
-/*   transition: 0.3s; */
+.container.single .container-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  padding: 3rem;
+  z-index: 2;
+  mix-blend-mode: color-burn;
+  max-width: 100vw;
 }
-.featured-image-container .card {
-  padding: 10px;
-  height: 0;
-  padding-bottom: calc(100% - 10px);
+.container.single .panel {
+  position: relative;
+  z-index: 3;
+  width: 700px;
+  max-width: 200vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-h2.heading_large {
-  font-size: 1.8em;
+.container.single .panel.behind {
+  z-index: 1;
 }
-img {
+.container.single .panel figure {
+  width: 100%;
+}
+.container.single .panel video,
+.container.single .panel img {
+  height: 60vh;
+  max-height: 95vh;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container.single .panel.width--thin {
+  width: 300px;
+}
+.container.single .panel.width--small {
+  width: 500px;
+}
+.container.single .panel.width--normal {
+  width: 700px;
+}
+.container.single .panel.width--wide {
+  width: 900px;
+}
+.container.single .panel.width--extra-wide {
+  width: 1100px;
+}
+.container.single .panel.height--extra-short video,
+.container.single .panel.height--extra-short img {
+  height: 20vh;
+}
+.container.single .panel.height--short video,
+.container.single .panel.height--short img {
+  height: 40vh;
+}
+.container.single .panel.height--normal video,
+.container.single .panel.height--normal img {
+  height: 60vh;
+}
+.container.single .panel.height--tall video,
+.container.single .panel.height--tall img {
+  height: 75vh;
+}
+.container.single .panel.height--extra-tall video,
+.container.single .panel.height--extra-tall img {
+  height: 90vh;
+}
+
+.container.double {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-wrap: nowrap;
   max-width: 100%;
+  overflow: hidden;
 }
-
-.header-section {
-  margin: 200px auto;
+.container.double .inner-container {
+  z-index: 2;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-
-.gs_reveal {
-  opacity: 0;
-  visibility: hidden;
-  will-change: transform, opacity;
+.container.double .row--bottom,
+.container.double .row--top {
+  z-index: 2;
+  height: 50vh;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 1.5rem;
+  z-index: 1;
+  position: relative;
+  align-items: center;
+}
+.container.double .container-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  padding: 3rem;
+  z-index: 6;
+  mix-blend-mode: color-burn;
+  max-width: 100vw;
+}
+.container.double .panel {
+  position: relative;
+  z-index: 7;
+  width: 700px;
+  max-width: 200vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.container.double .panel.behind {
+  z-index: 1;
+}
+.container.double .panel figure {
+  width: 100%;
+  height: 100%;
+}
+.container.double .panel video,
+.container.double .panel img {
+  height: 100%;
+  max-height: 55vh;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container.double .panel.width--thin {
+  width: 150px;
+}
+.container.double .panel.width--small {
+  width: 250px;
+}
+.container.double .panel.width--normal {
+  width: 350px;
+}
+.container.double .panel.width--wide {
+  width: 450px;
+}
+.container.double .panel.width--extra-wide {
+  width: 600px;
+}
+.container.double .panel.height--extra-short {
+  height: 45%;
+}
+.container.double .panel.height--short {
+  height: 60%;
+}
+.container.double .panel.height--normal {
+  height: 70%;
+}
+.container.double .panel.height--tall {
+  height: 85%;
+}
+.container.double .panel.height--extra-tall {
+  height: 100%;
 }
