--- a/css/style-skill.scss
+++ b/css/style-skill.scss
@@ -49,8 +49,8 @@ opening-animation
 }
 .opening__logo{
   display: block;
-  width: 500px;
-  height: 650px;
+  width: 600px;
+  height: 500px;
   z-index: 2;
   clip-path: inset(0 100% 0 0);/*予め切り取り*/
   transform: scale(1.1);/*予め大きくしておく*/
@@ -308,7 +308,7 @@ menu-content
     padding-right: 2%;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   
   .swiper-slide {
