--- a/css/style.css
+++ b/css/style.css
@@ -305,58 +305,6 @@ scroll-sticky
   margin: 0 auto;
 }
 
-/*-------------------------
-slide-scroll
---------------------------*/
-.fv {
-  background-color: #272727;
-  width: 100%;
-  height: 15vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1em;
-  font-weight: bold;
-}
-
-.panels-wrap {
-  width: -moz-fit-content;
-  width: fit-content;
-  display: flex;
-  height: 100vh;
-}
-
-.panels-wrap .panel:nth-of-type(1) {
-  background-color: #272727;
-}
-
-.panels-wrap .panel:nth-of-type(2) {
-  background-color: #272727;
-}
-
-.panels-wrap .panel:nth-of-type(3) {
-  background-color: #272727;
-}
-
-.panels-wrap .panel:nth-of-type(4) {
-  background-color: #272727;
-  border-bottom-right-radius: 40%;
-}
-
-.panel {
-  width: 100vw;
-  height: 75%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1em;
-}
-
-.panel h2 {
-  color: #fff;
-  font-size: 250%;
-}
-
 
 .container-border-radius {
   background-color: #272727;
@@ -365,6 +313,66 @@ slide-scroll
   height: 15vh;
   border-radius: 50% / 0 0 100% 100%;
 }
+
+
+
+.container-thisisme {
+  width: 100%;
+  height: auto;
+  padding: 20vh 5% 10%;
+  align-items: center;
+  display: block;
+  background-color: #272727;
+}
+
+.title-thisisme {
+  font-size: 2.8em;
+  color: white;
+  text-align: center;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-top: 5%;
+}
+
+.cards {
+  width: 80%;
+  justify-content: space-between;
+  margin: 3% auto 0;
+}
+
+.card {
+  border-radius: 10px;
+  background-color: #b2b2b2;
+  padding: 5% 8%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.heading {
+  font-size: 2em;
+  color: #ff6347;
+  text-align: center;
+}
+
+.text-thisisme {
+  font-size: 1em;
+  line-height: 1.8;
+}
+
+/*アニメーションの下準備*/
+.js-slideIn {
+  overflow: hidden;
+}
+
+.js-slideIn .js-slideIn-element {
+  display: inline-block;
+  transform: translateY(120%);
+}
+
+.js-trimming-animation {
+  -webkit-clip-path: inset(0 100% 0 0);
+          clip-path: inset(0 100% 0 0);
+}
+
 
 
 /*-------------------------
