--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ scroll-sticky
 .card {
   border-radius: 10px;
   background-color: #b2b2b2;
-  padding: 5% 8%;
+  padding: 1% 8% 3% 8%;
   flex-direction: column;
   align-items: center;
 }
